--- a/api/config/packages/api_platform.yaml
+++ b/api/config/packages/api_platform.yaml
@@ -4,7 +4,7 @@ api_platform:
     # Mercure integration, remove if unwanted
     mercure: ~
     formats:
-        jsonld: ['application/ld+json']
+        json: ['application/json']
     docs_formats:
         jsonld: ['application/ld+json']
         jsonopenapi: ['application/vnd.openapi+json']
@@ -19,3 +19,5 @@ api_platform:
             rfc_7807_compliant_errors: true
     event_listeners_backward_compatibility_layer: false
     keep_legacy_inflector: false
+    mapping:
+        paths: [ '%kernel.project_dir%/src/Entity', '%kernel.project_dir%/src/Controller/Resource' ]
