--- a/api/composer.json
+++ b/api/composer.json
@@ -32,6 +32,7 @@
     "require-dev": {
         "api-platform/schema-generator": "^5.0",
         "doctrine/doctrine-fixtures-bundle": "^3.5",
+        "liip/test-fixtures-bundle": "^2.7",
         "symfony/browser-kit": "6.4.*",
         "symfony/css-selector": "6.4.*",
         "symfony/debug-bundle": "6.4.*",
